# Ray-Tracer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Math.h  Math.hpp  Point.cpp  Point.h  Tuple.cpp  Tuple.h  Tuple.hpp  Vector.cpp  Vector.h
test/: CMakeLists.txt  CanvasTests.cpp  ColorTests.cpp  PointTests.cpp  TupleTests.cpp  VectorTests.cpp
